# AdventOfCode2016

./: LICENSE  readme.md
Day1/: Main.hs  readme.md
Day10/: Calculations.hs  Day10.cabal  Main.hs  Model.hs  readme.md
Day11/: Astar.hs  Cheat.hs  Day11.cabal  Main.hs  Model.hs  Parser.hs  input.txt  readme.md
Day12/: Day12.cabal  Main.hs  readme.md
Day13/: Astar.hs  Day13.cabal  Day13.fs  Main.hs  readme.md
Day14/: Astar.hs  Day14.cabal  Main.hs  readme.md
Day15/: Astar.hs  Day15.cabal  Main.hs  Parser.hs  readme.md
Day16/: Day16.cabal  Main.hs  Solution.fsx  readme.md
Day17/: Day17.cabal  Main.hs  readme.md
Day18/: Day18.cabal  Main.hs  readme.md
Day19/: Day19.cabal  Main.hs  readme.md
Day2/: Main.hs  readme.md
Day20/: Day20.cabal  Main.hs  readme.md
Day21/: Day21.cabal  Main.hs  Parser.hs  readme.md
Day22/: Day22.cabal  Main.hs  readme.md
Day23/: Day23.cabal  Main.hs  Parser.hs  readme.md
Day24/: Astar.hs  Day24.cabal  Main.hs  readme.md  stack.yaml
Day25/: Day25.cabal  Main.hs  readme.md
Day3/: readme.md
Day4/: Day4.cabal  Main.hs  Parser.hs  Solution.fsx  readme.md
Day5/: Day5.cabal  Main.hs  Solution.fsx  readme.md
Day6/: Day6.cabal  Main.hs  readme.md
Day7/: Day7.cabal  Main.hs  Parser.hs  readme.md
Day8/: Day8.cabal  Main.hs  Parser.hs  readme.md
Day9/: Day9.cabal  Main.hs  Parser.hs  readme.md
