name:                Day12
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten@gettingsharper.de
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Day12
  main-is:             Main.hs
  other-modules:       Parser
  -- other-extensions:
  build-depends:       base >=4.9 && < 5
                     , containers
  -- hs-source-dirs:      
  default-language:    Haskell2010