name:                Day24
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten@gettingsharper.de
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Day24
  main-is:             Main.hs
  build-depends:       base >=4.9 && < 5
                     , containers
                     , unordered-containers
                     , astar
                     , mtl
                     
  -- hs-source-dirs:      
  default-language:    Haskell2010